crates/sui-graphql-macros/tests/compile/missing_field_path_attr.stderr
error: Unexpected meta-item format `literal`
 --> tests/compile/missing_field_path_attr.rs:6:13
  |
6 |     #[field("object.address")]
  |             ^^^^^^^^^^^^^^^^

error: Missing field `path` at address
 --> tests/compile/missing_field_path_attr.rs:3:10
  |
3 | #[derive(QueryResponse)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `QueryResponse` (in Nightly builds, run with -Z macro-backtrace for more info)
