crates/sui-graphql-macros/tests/compile/missing_field_path_attr.rs
use sui_graphql_macros::QueryResponse;

#[derive(QueryResponse)]
struct WrongFormat {
    // Missing `path = ` key
    #[field("object.address")]
    address: String,
}

fn main() {}
